# pdx-rov

EPICS/IOC/SerialLED/: envPaths
EPICS/SupportDrivers/SerialLED/: Makefile
EPICS/asyn/: .cvsignore
EPICS/asyn/configure/: RELEASE  makeIncludeDbd.pl
EPICS/asyn/dbd/: test.dbd  testAsynPortDriver.dbd  testEpics.dbd  testGpib.dbd  testGpibSerial.dbd  testManager.dbd
EPICS/asyn/documentation/: KnownProblems.html
EPICS/asyn/include/: asynRecord.h
EPICS/asyn/makeSupport/: makeSupport.pl
EPICS/asyn/medm/: .cvsignore
EPICS/base/: .cvsignore  Makefile
EPICS/base/config/: CONFIG  CONFIG.Host.cygwin-x86  CONFIG.Host.darwin-ppc  CONFIG.Host.darwin-ppcx86  CONFIG.Host.darwin-x86  CONFIG.Host.freebsd  CONFIG.Host.freebsd-x86  CONFIG.Host.freebsd-x86_64  CONFIG.Host.hpux-parisc  CONFIG.Host.linux-ppc  CONFIG.Host.linux-x86  CONFIG.Host.linux-x86-debug  CONFIG.Host.linux-x86_64  CONFIG.Host.linux-x86_64-debug  CONFIG.Host.osf-alpha  CONFIG.Host.osf-alpha-gnu  CONFIG.Host.solaris-sparc  CONFIG.Host.solaris-sparc-debug  CONFIG.Host.sun4-sparc  (+93 more)
control/client/: CMakeLists.txt  Doxyfile  armjoystick.cpp  armjoystick.h  armpanel.cpp  armpanel.h  connectingdialog.cpp  connectingdialog.h  connectionmanager.cpp  connectionmanager.h  control.cpp  controlwindow.cpp  controlwindow.h  createconnectionwidget.ui  createjoystickdialog.cpp  createjoystickdialog.h  createjoystickwidget.ui  createservodialog.cpp  createservodialog.h  createservowidget.ui  createvarmonitordialog.cpp  createvarmonitordialog.h  createvarmonitorwidget.ui  joystickmanager.cpp  joystickmanager.h  joysticksmodel.cpp  joysticksmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  motorpanel.cpp  motorpanel.h  motorslider.cpp  motorslider.h  openedjoystickswidget.ui  pilot.cpp  pilotwindow.cpp  pilotwindow.h  propjoystick.cpp  propjoystick.h  (+24 more)
control/client/joystick/src/: joystickmanagerwindow.cpp  joystickmanagerwindow.h  main.cpp
control/pyserver/: arm.py  jsonserver.py  main.py  motorcontroller.py  prop.py  propulsion.py  servo.py  teensy.py  temperature.py  timer.py  vardispatcher.py  varserver.py
control/server/: CMakeLists.txt  Makefile  TODO  vars.h
control/teensy/: Makefile  main.c
joystick/: JoystickReader.pro  Makefile
joystick/src/: main.cpp  mainwindowimpl.cpp  mainwindowimpl.h  qjoystick.cpp  qjoystick.h
joystick/ui/: mainwindow.ui
net/server/: Makefile  client.h  main.c  request.c  request.h
proposal/: proposal_template.tex  proposalnsf.cls
rovos/jpeg_cannon/: Makefile  main.c  network.c  network.h
rovos/rc/: rov-cameras
(+773 files in other folders)
